--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "mobile-detect": "1.3.0",
     "moment": "2.10.6",
     "perfect-scrollbar": "0.6.8",
-    "toastr": "2.1.2"
+    "toastr": "2.1.2",
+    "angular-permission": "^3.3.0"
   },
   "devDependencies": {
     "angular-mocks": "1.4.9"
