--- a/bower.json
+++ b/bower.json
@@ -40,7 +40,8 @@
     "css-element-queries": "0.3.2",
     "jsPlumb": "2.0.5",
     "angular-gantt": "#339cc086b05a7fada3a81f9f55259f387d8903f9",
-    "moment-range": "2.1.0"
+    "moment-range": "2.1.0",
+    "angular-file-upload": "^2.3.4"
   },
   "devDependencies": {
     "angular-mocks": "1.5.0"
@@ -48,7 +49,7 @@
   "resolutions": {
     "angular": "1.5.0",
     "d3": "3.5.14",
-    "moment" :"2.11.2"
+    "moment": "2.11.2"
   },
   "overrides": {
     "angular-material": {
